--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,8 +18,7 @@
     font-weight: 500;
     src: url("../src/assets/fonts/DM_Sans/DMSans-Bold.ttf");
   }
-  p,
-  label {
+  p {
     @apply text-base;
   }
   h2 {
