--- a/src/app/components/add-patient/add-patient.component.html
+++ b/src/app/components/add-patient/add-patient.component.html
@@ -317,25 +317,25 @@
               </div>
             </div>
           </div>
-        </div>
-        <div
-          class="flex justify-between rounded-3xl border border-white bg-white"
-        >
-          <button
-            (click)="onClose()"
-            type="button"
-            class="text-sm font-semibold leading-6"
+          <div
+            class="flex justify-between rounded-3xl border border-white bg-white sm:col-span-6"
           >
-            Cancel
-          </button>
-          <button
-            type="submit"
-            [disabled]="!patientForm.dirty"
-            (click)="onSave()"
-            class="rounded-lg bg-portal-blue px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 disabled:bg-portal-gray-300"
-          >
-            Save
-          </button>
+            <button
+              (click)="onClose()"
+              type="button"
+              class="text-sm font-semibold leading-6"
+            >
+              Cancel
+            </button>
+            <button
+              type="submit"
+              [disabled]="!patientForm.dirty"
+              (click)="onSave()"
+              class="rounded-lg bg-portal-blue px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 disabled:bg-portal-gray-300"
+            >
+              Save
+            </button>
+          </div>
         </div>
       </div>
     </div>
