--- a/src/app/routes/appointments/appointments.component.html
+++ b/src/app/routes/appointments/appointments.component.html
@@ -1,14 +1,13 @@
-<div class="flex h-screen w-[80vw] max-h-[95vh] flex-col bg-white shadow-md rounded-lg">
+<div
+  class="flex h-screen max-h-[95vh] w-[80vw] flex-col rounded-lg bg-white shadow-md"
+>
   <header
     class="flex flex-none items-center justify-between border-b border-gray-200 px-6 py-4"
   >
     <h1 class="text-xl font-semibold leading-6 text-portal-purple-300">
       <time> {{ currentMonth }} </time>
     </h1>
-    <div class="flex items-center">
-      
-    
-    </div>
+    <div class="flex items-center"></div>
   </header>
   <div class="isolate flex flex-auto flex-col overflow-auto bg-white">
     <div
@@ -192,7 +191,7 @@
             <div></div>
             <div>
               <div
-              id="five-am"
+                id="five-am"
                 class="sticky left-0 z-20 -ml-14 -mt-2.5 w-14 pr-2 text-right text-xs leading-5 text-gray-400"
               >
                 5AM
@@ -201,7 +200,6 @@
             <div></div>
             <div>
               <div
-           
                 class="sticky left-0 z-20 -ml-14 -mt-2.5 w-14 pr-2 text-right text-xs leading-5 text-gray-400"
               >
                 6AM
@@ -365,8 +363,9 @@
             class="col-start-1 col-end-2 row-start-1 grid grid-cols-1 sm:grid-cols-7 sm:pr-8"
             style="grid-template-rows: 1.75rem repeat(288, minmax(0, 1fr)) auto"
           >
-            <li (click)="openModal()"
-              class="relative mt-px flex sm:col-start-3 cursor-pointer"
+            <li
+              (click)="openModal()"
+              class="relative mt-px flex cursor-pointer sm:col-start-3"
               style="grid-row: 74 / span 12"
             >
               <a
@@ -383,7 +382,6 @@
               style="grid-row: 92 / span 30"
             >
               <a
-            
                 class="group absolute inset-1 flex flex-col overflow-y-auto rounded-lg bg-blue-50 p-2 text-xs leading-5 hover:bg-blue-100"
               >
                 <p class="order-1 font-semibold text-blue-700">Check up</p>
@@ -394,11 +392,9 @@
             </li>
             <li
               class="relative mt-px hidden sm:col-start-6 sm:flex"
-              
               style="grid-row: 122 / span 24"
             >
               <a
-         
                 class="group absolute inset-1 flex flex-col overflow-y-auto rounded-lg bg-blue-50 p-2 text-xs leading-5 hover:bg-blue-100"
               >
                 <p class="order-1 font-semibold text-blue-700">
@@ -415,7 +411,6 @@
     </div>
   </div>
 </div>
-
 
 <ng-container *ngIf="displayModal">
   <app-modal modalStyle="appointmentView"> </app-modal>
