--- a/src/app/components/add-patient/add-patient.component.html
+++ b/src/app/components/add-patient/add-patient.component.html
@@ -317,9 +317,7 @@
               </div>
             </div>
           </div>
-          <div
-            class="flex justify-between rounded-3xl border border-white bg-white sm:col-span-6"
-          >
+          <div class="flex justify-between rounded-3xl sm:col-span-6">
             <button
               (click)="onClose()"
               type="button"
